@@ -1,10 +1,10 @@
 # This file is generated by Dist::Zilla::Plugin::CPANFile v6.014
 # Do not edit this file directly. To change prereqs, edit the `dist.ini` file.
 
-requires "HTTP::Exception" => "0";
 requires "HTTP::Status" => "0";
 requires "Hash::Match" => "0";
 requires "Plack::Middleware" => "0";
+requires "Plack::Response" => "0";
 requires "Plack::Util" => "0";
 requires "Plack::Util::Accessor" => "0";
 requires "Ref::Util" => "0";
@@ -15,12 +15,12 @@ recommends "Ref::Util::XS" => "0";
 
 on 'test' => sub {
   requires "File::Spec" => "0";
+  requires "HTTP::Exception" => "0";
   requires "HTTP::Request::Common" => "0";
   requires "Log::Dispatch" => "0";
   requires "Log::Dispatch::Array" => "0";
   requires "Module::Metadata" => "0";
   requires "Plack::Builder" => "0";
-  requires "Plack::Response" => "0";
   requires "Plack::Test" => "0";
   requires "Test::More" => "0";
 };
